Added section for displaying result count

--- a/index.html
+++ b/index.html
@@ -41,30 +41,31 @@
                         <p>Filter Search</p>
                         <ul class="list-group bg-dark">
                             <li class="list-group-item bg-dark">
-                                <label for="date" style="width: 30%;">Enter Date:</label>
+                                <label for="date">Enter Date:</label>
                                 <input type="text" placeholder="1/10/2010" id="datetime" />
                             </li>
                             <li class="list-group-item bg-dark">
-                                <label for="city" style="width: 30%;">Enter a City:</label>
+                                <label for="city">Enter a City:</label>
                                 <input type="text" id="city" />
                             </li>
                             <li class="list-group-item bg-dark">
-                                <label for="state" style="width: 30%;">Enter a State:</label>
+                                <label for="state">Enter a State:</label>
                                 <input type="text" id="state" />
                             </li>
                             <li class="list-group-item bg-dark">
-                                <label for="country" style="width: 30%;">Enter a Country:</label>
+                                <label for="country">Enter a Country:</label>
                                 <input type="text" id="country" />
                             </li>
                             <li class="list-group-item bg-dark">
-                                <label for="shape" style="width: 30%;">Enter a Shape:</label>
+                                <label for="shape">Enter a Shape:</label>
                                 <input type="text" id="shape" />
                             </li>    
                         </ul>
                     </form>
                 </div>
                 <div class="col-md-9">
-                    <h3>Table for Sightings Data</h3>>
+                    <h3>Table for Sightings Data</h3>
+                    <h4 id="resultCount"></h4>
                     <table class="table table-striped">
                         <thead>
                             <tr>
